[Media Controls] Disable rotate-to-fullscreen if no Device Orientation

Some devices don't support Device Orientation events. These are required
in order for MediaControlsOrientationLockDelegate to unlock the screen
orientation after rotate-to-fullscreen enters fullscreen, so without
Device Orientation events you can rotate-to-enter-fullscreen but not
rotate-to-exit-fullscreen.

This is a poor user experience, so this patch disables
rotate-to-fullscreen completely on devices that don't support Device
Orientation events.

Also fixes an uninitialized member variable in DeviceOrientationData.

Bug: 760737
Change-Id: Ic328cf548eb672eab4f030990f5d01f0a2ebca40
Reviewed-on: https://chromium-review.googlesource.com/645981
Commit-Queue: John Mellor <johnme@chromium.org>
Reviewed-by: Mounir Lamouri <mlamouri@chromium.org>
Cr-Commit-Position: refs/heads/master@{#499219}
Former-commit-id: 48a2cccd53bdd18aca0360695df835ed84d4fec5