third_party/WebKit/Source/modules/media_controls/MediaControlsRotateToFullscreenDelegate.cpp
@@ -12,6 +12,8 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "core/fullscreen/Fullscreen.h"
 #include "core/html/HTMLVideoElement.h"
 #include "core/page/ChromeClient.h"
+#include "modules/device_orientation/DeviceOrientationData.h"
+#include "modules/device_orientation/DeviceOrientationEvent.h"
 #include "modules/media_controls/MediaControlsImpl.h"
 #include "public/platform/Platform.h"
 #include "public/platform/WebScreenInfo.h"
@@ -53,6 +55,7 @@ void MediaControlsRotateToFullscreenDelegate::Attach() {
   // TODO(johnme): Check this is battery efficient (note that this doesn't need
   // to receive events for 180 deg rotations).
   dom_window->addEventListener(EventTypeNames::orientationchange, this, false);
+  dom_window->addEventListener(EventTypeNames::deviceorientation, this, false);
 }
 
 void MediaControlsRotateToFullscreenDelegate::Detach() {
@@ -78,6 +81,8 @@ void MediaControlsRotateToFullscreenDelegate::Detach() {
     return;
   dom_window->removeEventListener(EventTypeNames::orientationchange, this,
                                   false);
+  dom_window->removeEventListener(EventTypeNames::deviceorientation, this,
+                                  false);
 }
 
 bool MediaControlsRotateToFullscreenDelegate::operator==(
@@ -93,6 +98,10 @@ void MediaControlsRotateToFullscreenDelegate::handleEvent(
       event->type() == EventTypeNames::fullscreenchange ||
       event->type() == EventTypeNames::webkitfullscreenchange) {
     OnStateChange();
+    return;
+  }
+  if (event->type() == EventTypeNames::deviceorientation) {
+    OnDeviceOrientationAvailable(ToDeviceOrientationEvent(event));
     return;
   }
   if (event->type() == EventTypeNames::orientationchange) {
@@ -130,6 +139,21 @@ void MediaControlsRotateToFullscreenDelegate::OnVisibilityChange(
   is_visible_ = is_visible;
 }
 
+void MediaControlsRotateToFullscreenDelegate::OnDeviceOrientationAvailable(
+    DeviceOrientationEvent* event) {
+  LocalDOMWindow* dom_window = video_element_->GetDocument().domWindow();
+  if (!dom_window)
+    return;
+  // Stop listening after the first event. Just need to know if it's available.
+  dom_window->removeEventListener(EventTypeNames::deviceorientation, this,
+                                  false);
+
+  // MediaControlsOrientationLockDelegate needs beta and gamma only.
+  DeviceOrientationData* data = event->Orientation();
+  device_orientation_supported_ =
+      WTF::make_optional(data->CanProvideBeta() && data->CanProvideGamma());
+}
+
 void MediaControlsRotateToFullscreenDelegate::OnScreenOrientationChange() {
   SimpleOrientation previous_screen_orientation = current_screen_orientation_;
   current_screen_orientation_ = ComputeScreenOrientation();
@@ -138,6 +162,13 @@ void MediaControlsRotateToFullscreenDelegate::OnScreenOrientationChange() {
 
   // Only enable if native media controls are used.
   if (!video_element_->ShouldShowControls())
+    return;
+
+  // Only enable if the Device Orientation API can provide beta and gamma values
+  // that will be needed for MediaControlsOrientationLockDelegate to
+  // automatically unlock, such that it will be possible to exit fullscreen by
+  // rotating back to the previous orientation.
+  if (!device_orientation_supported_.value_or(false))
     return;
 
   // Don't enter/exit fullscreen if some other element is fullscreen.
