third_party/WebKit/Source/modules/media_controls/MediaControlsRotateToFullscreenDelegate.h
@@ -7,9 +7,11 @@
 
 #include "core/dom/events/EventListener.h"
 #include "modules/ModulesExport.h"
+#include "platform/wtf/Optional.h"
 
 namespace blink {
 
+class DeviceOrientationEvent;
 class HTMLVideoElement;
 class ElementVisibilityObserver;
 
@@ -46,10 +48,13 @@ class MediaControlsRotateToFullscreenDelegate final : public EventListener {
 
   void OnStateChange();
   void OnVisibilityChange(bool is_visible);
+  void OnDeviceOrientationAvailable(DeviceOrientationEvent*);
   void OnScreenOrientationChange();
 
   MODULES_EXPORT SimpleOrientation ComputeVideoOrientation() const;
   SimpleOrientation ComputeScreenOrientation() const;
+
+  WTF::Optional<bool> device_orientation_supported_;
 
   SimpleOrientation current_screen_orientation_ = SimpleOrientation::kUnknown;
 
